# shiftBench-AV

./: .pylintrc  README.md
configs/: nuscenes_mini_benchmark.json  nuscenes_mini_benchmark_adaptive.json  nuscenes_mini_benchmark_novel.json  sample_benchmark.json  sqlite_benchmark.json
domain-shift-fusion-benchmark/: README.md  pyproject.toml
domain-shift-fusion-benchmark/examples/: demo_samples.db  sample_results.json  sqlite_results.json
domain-shift-fusion-benchmark/src/fusionbench/bench/: metrics.py  runner.py
domain-shift-fusion-benchmark/src/fusionbench/core/: types.py
domain-shift-fusion-benchmark/src/fusionbench/data/: __init__.py  sqlite_store.py
domain-shift-fusion-benchmark/src/fusionbench/domain_shift/: scenarios.py
domain-shift-fusion-benchmark/src/fusionbench/fusion/: __init__.py  uncertainty.py
domain-shift-fusion-benchmark/src/fusionbench/perturbations/: operators.py
domain-shift-fusion-benchmark/tests/: test_fusion.py  test_sqlite_path.py
examples/: nuscenes_mini_results_adaptive.json  nuscenes_mini_results_baseline_again.json  nuscenes_mini_results_novel.json  run_sqlite_demo.sh
scripts/: build_nuscenes_sqlite.py  generate_result_graphs.py
src/fusionbench/: __init__.py
src/fusionbench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/fusionbench/bench/: __init__.py  metrics.py  runner.py
src/fusionbench/cli/: main.py
src/fusionbench/core/: utils.py
src/fusionbench/data/: synthetic.py
src/fusionbench/domain_shift/: __init__.py
tests/: test_fusion.py  test_perturbations.py  test_runner.py
(+4 files in other folders)
