[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fusionbench"
version = "0.1.0"
description = "Open benchmarking toolkit for uncertainty-aware sensor fusion under domain shift"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Ishita Datta" }
]
license = { text = "MIT" }
keywords = ["sensor-fusion", "domain-shift", "robustness", "benchmarking", "uncertainty"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
fusionbench = "fusionbench.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
